config/Basics/02-virtualservice-webserver-v2.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: webserver
spec:
  hosts:
  - webserver
  http:
  - name: canary
    match:
    - uri:
        exact: "/hostname"
    - headers:
        x-canary:
          exact: "true"
    route:
    - destination:
        host: webserver
        subset: v11
  - name: default
    route:
    - destination:
        host: webserver
        subset: v10
