config/Basics/03-destinationrule-webserver.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: webserver
spec:
  host: webserver
  subsets:
  - name: v10
    labels:
      version: v1.0
  - name: v11
    labels:
      version: v1.1
